# btb-client

./: .gitignore  ALL_BUILD.vcxproj  CMakeLists.txt  INSTALL.vcxproj  License.md  README.md  ZERO_CHECK.vcxproj  btb-client.vcxproj
src/: dllmain.cpp  pch.hpp
src/btb/events/: types.cpp  types.hpp
src/btb/hooks/: hook.cpp  hook.hpp  patch_helper.cpp  patch_helper.hpp
src/btb/hooks/impl/: directx_hooks.cpp  directx_hooks.hpp  input_hooks.cpp  input_hooks.hpp  minecraft_visual_hooks.cpp  minecraft_visual_hooks.hpp
src/btb/sdk/: multiversion.cpp  multiversion.hpp
src/utils/: kiero.cpp
